@@ -12,10 +12,12 @@ t/api.t
 t/Builder.t
 t/CoffeeSize.t
 t/lib/CoffeeSize.pm
+t/lib/LockFlag.pm
 t/lib/ToastStatus.pm
 t/lib/TrafficLight.pm
 t/lib/TurnstileState.pm
 t/lib/TurnstileStateMachine.pm
+t/LockFlag.t
 t/ToastStatus.t
 t/TrafficLight.t
 t/TurnstileState.t
