@@ -84,6 +84,10 @@ L<Data::Enum>
 
 L<Object::Enum>
 
+=item *
+
+L<enum>
+
 =back
 
 =head1 AUTHOR
